2005-10-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: 1.1.9.99.
	* src/mod_mono.[ch]: server variables are now written with the rest of
	the initial data sent to mod-mono-server. Variables starting with HTTP_
	are not sent, as those will be created by System.Web from the headers.

2005-10-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: send all the server variables in one single write.
	Before we did 2 writes per variable. Incremented version to 5. You'll
	need to sync with xsp.
	* src/mod_mono.h: add table defines for apache 1.3.

2005-10-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.[ch]:
	(get_default_socket_name): handle the NULL alias case setting it to
	"default".
	Style fixes and replaced sprintf with apr_psprintf.

2005-09-23 Joshua Tauberer <tauberer@for.net>

	* src/mod_mono.c:
	
	  The default alias for xsp's within vhosts is the name of the
	  vhost server, so that vhosts with default aliases don't all
	  use the same Unix socket file name.  A new is_default field
	  tracks whether an XSP is the server default, rather than using
	  the "default" alias.
	  
	  Aliases are never NULL except when passed to search_for_alias,
	  start_xsp, and terminate_xsp2.
	  
	  The control panel is amended so that individual XSPs
	  can be restarted.

2005-09-19 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: if we read 0 bytes, stop the loop in apr_socket_recv
	used in apache 1.3. Patch by Mathias Herberts.

2005-09-01 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.[ch]: one single read for all the headers.
	Update xsp too.

2005-08-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.[ch]: new SEND_FILE command that uses apache's ap_send_fd
	when sending a file. No more sucking when mod_mono serves static files.

2005-07-26 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.h: updated to new default path for mod-mono-server.exe.