@@ -6,5 +6,20 @@
 
 <IfModule !mod_mono.c>
     LoadModule mono_module @APXS_LIBEXECDIR@/mod_mono.so
+
+    AddType application/x-asp-net .aspx
+    AddType application/x-asp-net .asmx
+    AddType application/x-asp-net .ashx
+    AddType application/x-asp-net .asax
+    AddType application/x-asp-net .ascx
+    AddType application/x-asp-net .soap
+    AddType application/x-asp-net .rem
+    AddType application/x-asp-net .axd
+    AddType application/x-asp-net .cs
+    AddType application/x-asp-net .config
+    AddType application/x-asp-net .dll
+    DirectoryIndex index.aspx
+    DirectoryIndex Default.aspx
+    DirectoryIndex default.aspx
 </IfModule>
 
